Steps to use the app

--- a/SGP-BACKEND/SGP-BACKEND/SGP-BACKEND/appsettings.Development.json
+++ b/SGP-BACKEND/SGP-BACKEND/SGP-BACKEND/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Conexion": "Server=localhost;Initial Catalog=PermisosEmpleadosDb;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Conexion": "Server=.;Initial Catalog=PermisosEmpleadosDb;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
